--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,5 @@
 <h1>And this is the about us page!</h1>
 <h6>Is it cool too?</h6>
+
+<h3><%= link_to 'Check out our listings!', articles_path %> |
+<h3><%= link_to 'Go to the home page', root_path %>
