--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
 <h1>This is my home page!</h1>
 <h6>Cool, right?</h6>
+<h3><%= link_to 'Check out our listings!', articles_path %> |
+<h3><%= link_to 'Learn more about us', about_path %>
