--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,23 +1,5 @@
 <h1>Create a new post!</h1>
 
-<ul>
-<% if @article.errors.any? %>
-    <%= @article.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-    <% end %>
-<% end %>
-</ul>
+<%= render 'form' %>
 
-<%= form_with scope: :article, url: articles_path, local: true do |f| %>
-	<p>
-    	<%= f.label("Title") %><br/>
-    	<%= f.text_field("title") %>
-    </p>
-    <p>
-    	<%= f.label("Description") %><br/>
-    	<%= f.text_area("description") %>
-    </p>
-    <p>
-    	<%= f.submit %>
-    </p>
- <% end %>
+<h5><%= link_to 'Cancel creation', articles_path, data: {confirm: "Are you sure you want cancel creation?"} %> |
