--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,8 @@
 <h1>Blog Post</h1>
 <p><strong>Title: </strong><%= @article.title %></p>
-<p><strong>Description: </strong><%= @article.description %></p>
+<p><strong>Description: </strong><%= @article.description %></p><br/>
+<h5>
+	<%= link_to 'Edit', edit_article_path(params[:id]), method: :get %> |
+	<%= link_to 'Delete', article_path(params[:id]), method: :delete, data: {confirm: "Are you sure you want to delete this post?"} %> |
+	<%= link_to 'Go back to listings!', articles_path %> |	
+</h5>
