--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,17 @@
-<h1>This is my home page!</h1>
-<h6>Cool, right?</h6>
-<h3><%= link_to 'Check out our listings!', articles_path %> |
-<h3><%= link_to 'Learn more about us', about_path %>
+
+<div class="container-fluid" id="jumbocont">
+	<div class="jumbotron">
+	  <h1 class="display-4">Be Creative.</h1>
+	  <p class="lead"><em>Welcome To The Best Blogging Platform There Is.</p>
+	  <hr class="my-4">
+	  <p>Used by millions, enjoyed by millions.</p>
+	  <p class="lead">
+	    <a class="btn btn-success btn-lg" href="#" role="button">Sign Up</a>
+	  </p>
+	</div>
+</div>
+<section class="links">
+	<h3><%= link_to 'Check out our listings!', articles_path %> | <%= link_to 'Learn more about us', about_path %></h3>
+</section>
+
+
