--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,21 +1,22 @@
-<ul>
-<% if @article.errors.any? %>
-    <%= @article.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-12">
+            <%= render 'shared/alerts' %>
+        </div>
+    </div>
+    <%= form_with(model: @article, local:true) do |f| %>
+    <div class="row justify-content-center shadow-lg p-3 mb-5 bg-white rounded">
+        <div class="col-12">
+            <div class="form-group">
+                <%= f.label("Title", class: "h1 font-weight-bold") %><br/>
+                <%= f.text_field("title", class: "form-control shadow-sm rounded", placeholder: "Title") %>
+            </div>
+            <div class="form-group">
+                <%= f.label("Description", class: "h1 font-weight-bold") %><br/>
+                <%= f.text_area("description", class: "form-control shadow-sm rounded", rows: 10, placeholder: "Description") %>
+            </div>
+        </div>
+        <%= f.submit class: "btn btn-info btn-lg mt-2 mb-2" %>
+    </div>
     <% end %>
-<% end %>
-</ul>
-
-<%= form_with(model: @article, local:true) do |f| %>
-    <p>
-        <%= f.label("Title") %><br/>
-        <%= f.text_field("title") %>
-    </p>
-    <p>
-        <%= f.label("Description") %><br/>
-        <%= f.text_area("description") %>
-    </p>
-    <p>
-        <%= f.submit %>
-    </p>
- <% end %>
+</div>
