--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,7 +1,8 @@
-<h1>Edit your post</h1>
-
+<h1 class="text-center font-italic font-weight-light mb-5">Edit your post</h1>
 <%= render 'form' %>
 
-<h5><%= link_to 'Cancel editing', article_path(@article), data: {confirm: "Are you sure you want cancel editing?"} %> |
-<%= link_to 'Delete', article_path(params[:id]), method: :delete, data: {confirm: "Are you sure you want to delete this post?"} %>   
-</h5>
+<div class="text-center">
+	<h5><%= link_to 'Cancel editing', article_path(@article), class: "btn btn-warning", data: {confirm: "Are you sure you want cancel editing?"} %> |
+	<%= link_to 'Delete', article_path(params[:id]), class: "btn btn-danger", method: :delete, data: {confirm: "Are you sure you want to delete this post?"} %>   
+	</h5>
+</div>
