--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,8 +1,23 @@
-<h1>Blog Post</h1>
-<p><strong>Title: </strong><%= @article.title %></p>
-<p><strong>Description: </strong><%= @article.description %></p><br/>
-<h5>
-	<%= link_to 'Edit', edit_article_path(params[:id]), method: :get %> |
-	<%= link_to 'Delete', article_path(params[:id]), method: :delete, data: {confirm: "Are you sure you want to delete this post?"} %> |
-	<%= link_to 'Go back to listings!', articles_path %> |	
-</h5>
+<div class="text-center">
+	<h2><%= @article.title %></h2>
+</div>
+<div class="container">
+	  <div class="row justify-content-md-center">
+	    <div class="col-8 mt-4">
+			<div class="card text-center shadow-lg mb-5 bg-white rounded">
+				  <div class="card-header font-italic">
+				    by Diego Romero
+				  </div>
+				  <div class="card-body">
+				    <div class="card-text"><%= simple_format(@article.description) %></div>
+				    <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-outline-success" %>
+				    <%= link_to 'Delete', article_path(@article), method: :delete, class: "btn btn-outline-danger", data: {confirm: "Are you sure?"} %>
+				  </div>
+				  <div class="card-footer text-muted">
+				    <small>Created <%= time_ago_in_words(@article.created_at) %> ago,
+				    	Updated <%= time_ago_in_words(@article.updated_at) %> ago</small>
+				  </div>
+				</div>
+			</div>
+		</div>
+	</div>
