--- a/app/views/layouts/_notices.html.erb
+++ b/app/views/layouts/_notices.html.erb
@@ -1,3 +1,9 @@
 <% flash.each do |type, alert| %>
-    <h3><%= alert %></h3>
+<div class="container">
+	<div class="alert alert-success alert-dismissible fade show" role="alert">
+		<strong><%= alert %></strong>
+		<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+		<span aria-hidden="true">&times;</span>
+	</div>
+</div>
 <% end %>
