--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,7 +6,7 @@
 	    <div class="col-8 mt-4">
 			<div class="card text-center shadow-lg mb-5 bg-white rounded">
 				  <div class="card-header font-italic">
-				    by Diego Romero
+				    by <%= @article.user.name %>
 				  </div>
 				  <div class="card-body">
 				    <div class="card-text"><%= simple_format(@article.description) %></div>
