alerts color change

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -91,3 +91,43 @@ body {
 #cards-size {
 	min-width: 100%;
 }
+
+#login-form {
+  max-width: 33%;
+  position: relative;
+  top: 15%;
+}
+
+/* PAGINATION */
+
+.flickr_pagination {
+  text-align: center;
+  padding: 0.3em;
+  cursor: default; }
+  .flickr_pagination a, .flickr_pagination span, .flickr_pagination em {
+    padding: 0.2em 0.5em; 
+    border-radius: 10%;}
+  .flickr_pagination .disabled {
+    color: gray; }
+  .flickr_pagination .current {
+    font-style: normal;
+    font-weight: bold;
+    color: DarkBlue; }
+  .flickr_pagination a {
+    border: 1px solid #dddddd;
+    color: CornflowerBlue;
+    text-decoration: none; 
+    font-weight: bolder; }
+    .flickr_pagination a:hover, .flickr_pagination a:focus {
+      border-color: gray;
+      background: whitesmoke;
+      color: gray; }
+  .flickr_pagination .page_info {
+    color: #aaaaaa;
+    padding-top: 0.8em; }
+  .flickr_pagination .previous_page, .flickr_pagination .next_page {
+    border-width: 2px; }
+  .flickr_pagination .previous_page {
+    margin-right: 1em; }
+  .flickr_pagination .next_page {
+    margin-left: 1em; }
