--- a/app/views/layouts/_main-nav.html.erb
+++ b/app/views/layouts/_main-nav.html.erb
@@ -8,19 +8,41 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto justify-content-end">
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <%= link_to 'Bloggers', users_path, class: "nav-link" %>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Articles
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <%= link_to 'New Article', new_article_path, class: "dropdown-item"  %>
+              <% if user_signed_in? %>
+                <%= link_to 'New Article', new_article_path, class: "dropdown-item"  %>
+              <% end %>
               <%= link_to 'All Articles', articles_path, class: "dropdown-item" %>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
           </li>
+            <% if user_signed_in? %>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <%= "(Admin)" if current_user.admin? %> Profile
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <%= link_to 'View Profile', user_path(current_user), class: "dropdown-item"  %>
+                  <%= link_to 'Edit Profile', edit_user_path(current_user), class: "dropdown-item" %>
+                  <%= link_to 'Delete Profile', edit_user_path(current_user), class: "dropdown-item text-danger", 
+                  method: :delete, data: {confirm: "Are you sure?"} %>
+                </div>
+              </li>
+              <li class="nav-item">
+                <%= link_to 'Logout', logout_path, method: :delete, class: "nav-link" %>
+              </li>
+            <% else %>
+              <li class="nav-item">
+                <%= link_to 'Login', login_path, class: "nav-link" %>
+              </li>
+            <% end %>
         </ul>
       </div>
   </nav>
