--- a/app/views/layouts/_notices.html.erb
+++ b/app/views/layouts/_notices.html.erb
@@ -1,6 +1,6 @@
 <% flash.each do |type, alert| %>
 <div class="container">
-	<div class="alert alert-success alert-dismissible fade show" role="alert">
+	<div class="alert alert-<%= type == "notice" ? "success" : "danger" %> alert-dismissible fade show" role="alert">
 		<strong><%= alert %></strong>
 		<button type="button" class="close" data-dismiss="alert" aria-label="Close">
 		<span aria-hidden="true">&times;</span>
