--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
 	  <hr class="my-4">
 	  <p>Used by millions, enjoyed by millions.</p>
 	  <p class="lead">
-	    <a class="btn btn-success btn-lg" href="#" role="button">Sign Up</a>
+	    <%= link_to "Sign Up", signup_path, class: "btn btn-success btn-lg" %>
 	  </p>
 	</div>
 </div>
