--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -15,6 +15,13 @@
                 <%= f.label("Description", class: "h1 font-weight-bold") %><br/>
                 <%= f.text_area("description", class: "form-control shadow-sm rounded", rows: 10, placeholder: "Description") %>
             </div>
+            <div class="form-group">
+                <%= f.label(:category, class: "h1 font-weight-bold") %><br/>
+                <strong>
+                <%= f.collection_select(:category_ids, Category.all, :id, :name, { 
+                    prompt: "You can select multiple categories"}, {multiple: true, size: 2, 
+                        class: "custom-select rounded shadow-sm"}) %>
+            </div>
         </div>
         <%= f.submit class: "btn btn-info btn-lg mt-2 mb-2" %>
     </div>
