--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,10 +8,13 @@
 				  <div class="card-header font-italic">
 				    by <%= @article.user.name %>
 				    <%= link_to gravatar_img(@article.user), user_path(@article.user) %>
+				  	<% if @article.categories.any? %>
+				  	<div class="mt-2"><%= render @article.categories %></div>
+				  	<% end %>
 				  </div>
 				  <div class="card-body">
 				    <div class="card-text"><%= simple_format(@article.description) %></div>
-				    <% if user_signed_in? && (@article.user == current_user || current_user.admin? %>
+				    <% if user_signed_in? && (@article.user == current_user || current_user.admin?) %>
 					    <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-outline-success" %>
 					    <%= link_to 'Delete', article_path(@article), method: :delete, class: "btn btn-outline-danger", data: {confirm: "Are you sure?"} %>
 					<% end %>
