--- a/app/views/layouts/_main-nav.html.erb
+++ b/app/views/layouts/_main-nav.html.erb
@@ -19,8 +19,17 @@
                 <%= link_to 'New Article', new_article_path, class: "dropdown-item"  %>
               <% end %>
               <%= link_to 'All Articles', articles_path, class: "dropdown-item" %>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Categories
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <% if user_signed_in? && current_user.admin? %>
+                <%= link_to 'New Category', new_category_path, class: "dropdown-item"  %>
+              <% end %>
+              <%= link_to 'View Categories', categories_path, class: "dropdown-item" %>
             </div>
           </li>
             <% if user_signed_in? %>
@@ -31,12 +40,10 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <%= link_to 'View Profile', user_path(current_user), class: "dropdown-item"  %>
                   <%= link_to 'Edit Profile', edit_user_path(current_user), class: "dropdown-item" %>
-                  <%= link_to 'Delete Profile', edit_user_path(current_user), class: "dropdown-item text-danger", 
-                  method: :delete, data: {confirm: "Are you sure?"} %>
+                  <%= link_to 'Logout', logout_path, method: :delete, class: "dropdown-item font-weight-bold" %>
+                  <div class="dropdown-divider"></div>
+                  <%= link_to 'Delete Profile', edit_user_path(current_user), class: "dropdown-item text-danger font-weight-bold", method: :delete, data: {confirm: "Are you sure?"} %>
                 </div>
-              </li>
-              <li class="nav-item">
-                <%= link_to 'Logout', logout_path, method: :delete, class: "nav-link" %>
               </li>
             <% else %>
               <li class="nav-item">
